--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,8 @@
 .wrapper-input-output {
     margin: 4% 10%;
 
+    position: relative;
+
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
